--- a/src/main/resources/templates/board/boardUpdate.html
+++ b/src/main/resources/templates/board/boardUpdate.html
@@ -87,7 +87,7 @@
                 success : function(data){
                     if(data == bno) {
                         alert("수정 성공");
-                        location.href='/board/boardView/'+bno;
+                        location.href='/yu/board/boardView/'+bno;
                     }
                     else
                         alert("수정 실패");
