--- a/src/main/resources/templates/home/indexLogin.html
+++ b/src/main/resources/templates/home/indexLogin.html
@@ -3,7 +3,7 @@
 <body>
 <script>
     alert("로그인해주세요");
-    location.href='/yuhome/index';
+    location.href='/yu/index';
 </script>
 </body>
 </html>
