--- a/src/main/resources/templates/matching/matchingList.html
+++ b/src/main/resources/templates/matching/matchingList.html
@@ -18,7 +18,7 @@
         var boardtype=getParameterByName("boardtype");
         
         function InsertMatchingBoard() {
-            location.href = "/matching/matchingInsert?boardtype=" +boardtype;
+            location.href = "/yu/matching/matchingInsert?boardtype=" +boardtype;
         }
     </script>
 
@@ -44,9 +44,9 @@
                     	 매칭게시판
                     </a>
                     <div class="dropdown-menu text-center">
-                        <a class="dropdown-item" href="/matching/matchingList?boardtype=심부름">심부름</a><br>
-                        <a class="dropdown-item" href="/matching/matchingList?boardtype=역할대행">역할대행</a><br>
-                        <a class="dropdown-item" href="/matching/matchingList?boardtype=멘토맨티">멘토멘티</a>
+                        <a class="dropdown-item" href="/yu/matching/matchingList?boardtype=심부름">심부름</a><br>
+                        <a class="dropdown-item" href="/yu/matching/matchingList?boardtype=역할대행">역할대행</a><br>
+                        <a class="dropdown-item" href="/yu/matching/matchingList?boardtype=멘토맨티">멘토멘티</a>
                     </div>
                 </li>
             </ul>
