--- a/src/main/resources/templates/matching/matchingProceeding.html
+++ b/src/main/resources/templates/matching/matchingProceeding.html
@@ -38,7 +38,7 @@
                 success : function(data){
                     if(data == true) {
                         alert("완료 성공");
-                        location.href = '/matching/matchingList?boardtype=심부름';
+                        location.href = '/yu/matching/matchingList?boardtype=심부름';
                     }
                     else
                         alert("완료 실패");
@@ -62,7 +62,7 @@
                 success : function(data){
                     if(data == true) {
                         alert("취소 요청 성공");
-                        location.href = '/matching/matchingList?boardtype=심부름';
+                        location.href = '/yu/matching/matchingList?boardtype=심부름';
                     }
                     else
                         alert("취소 요청 실패");
