--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -1,121 +1,11 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/basic}">
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width" , initial-scale="1">
-  <title>이성욱</title>
-  <link rel="stylesheet" th:href="@{/css/bootstrap.css}">
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-  <script th:src="@{/js/bootstrap.js}"></script>
-  <script th:src="@{/scripts/jquery.min.js}"></script>
-</head>
+<th:block layout:fragment="title">
+	<title>YU BoardList</title>
+</th:block>
 
-<body>
-
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-center">
-    <a class="navbar-brand" href="index.html">나만 따라 YU</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbar">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item dropdown dropdown-mobile"><a class="nav-link dropdown-toggle" id="dropdown" data-toggle="dropdown">
-            매칭
-          </a>
-          <div class="dropdown-menu" aria-labelledby="dropdown">
-            <a class="dropdown-item" href="#">청소</a>
-            <a class="dropdown-item" href="#">배달</a>
-            <a class="dropdown-item" href="#">역할대행</a>
-            <a class="dropdown-item" href="#">심부름</a>
-          </div>
-        </li>
-        <li class="nav-item"><a class="nav-link" href="#">시간표</a></li>
-        <li class="nav-item"><a class="nav-link" href="class.html">강의평가</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">게시판</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">통계그래프</a></li>
-        <li>
-          <form class="input-group">
-            <input class="form-control mr-sm-3" type="search" placeholder="검색어를 입력해 주세요." aria-label="Search">
-            <button class="btn glass" type="submit"><img th:src="@{/images/돋보기.png}" width="100%"></button>
-          </form>
-        </li>
-        <li>
-          <form class="form-signin" style="margin:auto;">
-            <img th:src="@{/images/증명사진.jpg}" style="width:25%;">
-            <div style="color: white">이성욱 님, 환영합니다!!!</div>
-            <button class="btn btn-sm btn-block btn-outline-light" type="button" onclick="location.href='myInfo.html'">내정보</button>
-            <button class="btn btn-sm btn-block btn-danger" type="button" onclick="location.href='index.html'">로그아웃</button>
-          </form>
-        </li>
-      </ul>
-    </div>
-  </nav>
-
-
-  <div class="row flex">
-    <div class="col-2 item">
-      <a href="login.html"><img th:src="@{/images/영대마크.png}" href="#page-top"></a>
-    </div>
-    <div class="col-7 item">
-      <form class="input-group" method="get">
-        <input class="form-control mr-sm-2" type="search" placeholder="검색어를 입력해 주세요." aria-label="Search">
-        <button class="btn glass" type="submit"><img th:src="@{/images/돋보기.png}" width="100%"></button>
-      </form>
-    </div>
-    <div class="col-3 item">
-      <form class="form-signin" style="margin:auto;">
-        <img th:src="@{/images/증명사진.jpg}" style="width:25%;">
-        이성욱 님, 환영합니다!!!
-        <button class="btn btn-sm btn-block btn-outline-dark" type="button" onclick="location.href='myInfo.html'">내정보</button>
-        <button class="btn btn-sm btn-block btn-danger" type="button" onclick="location.href='index.html'">로그아웃</button>
-      </form>
-    </div>
-  </div>
-
-  <br>
-
-  <div id="grid">
-    <div id="menubar">
-      <ul class="nav flex-column">
-        <li class="dropdown dropright">
-          <a class="nav-link" href="#" id="navbarDroprightMenuLink" role="button" data-toggle="collapse" aria-haspopup="true" aria-expanded="false" tabindex="-1" aria-disabled="true" data-target="#demo">
-            매칭
-          </a>
-          <div id="demo" class="collapse">
-            <a href="#">청소</a><br>
-            <a href="#">배달</a><br>
-            <a href="#">역할대행</a><br>
-            <a href="#">심부름</a>
-          </div>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" href="schedule.html" tabindex="-1" aria-disabled="true">시간표</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="class.html" tabindex="-1" aria-disabled="true">강의평가</a>
-        </li>
-        <li class="dropdown dropright">
-          <a class="nav-link" href="#" id="navbarDroprightMenuLink" role="button" data-toggle="collapse" aria-haspopup="true" aria-expanded="false" tabindex="-1" aria-disabled="true" data-target="#demo2">
-            게시판
-          </a>
-          <div id="demo2" class="collapse">
-            <a href="/board/boardList?boardtype=자유게시판">자유게시판</a><br>
-            <a href="/board/boardList?boardtype=중고게시판">중고게시판</a><br>
-            <a href="/board/boardList?boardtype=정보게시판">정보게시판</a><br>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">통계 그래프</a>
-        </li>
-      </ul>
-    </div>
-
-    <br>
-
+<th:block layout:fragment="article">
     <div id="article">
       <div class="container-fluid">
         <div class="col-sm-auto article-header">
@@ -135,7 +25,7 @@
 		<tbody id="tbody">
         <tr th:each="boardlist :${board}">
             <td th:text="${boardlist.getBno()}"></td>
-            <td> <a th:href="@{'/board/boardView/'+${boardlist.getBno()}}" th:text="${boardlist.getTitle()}"></a></td>
+            <td> <a th:href="@{'/yu/board/boardView/'+${boardlist.getBno()}}" th:text="${boardlist.getTitle()}"></a></td>
             <td th:text="${boardlist.getNickname()}"></td>
             <td th:text="${boardlist.getRegister_date()}"></td>
             <td th:text="${boardlist.getRead_count()}"></td>
@@ -156,7 +46,7 @@
 			</li>
 			<li style="cursor:pointer" id="pagePrev" class="page-item disabled">
 				<a th:onClick="|return pageMove('prev');|">
-					<span class="page-link"><</span>
+					<span class="page-link">&lt;</span>
 				</a>
 			</li>
 			<li class="page-item" style="cursor:pointer" th:if="${board.getTotalPages()}>0" th:id="page+${num}" th:each="num: ${#numbers.sequence(0,board.getTotalPages()-1)}">
@@ -164,7 +54,7 @@
 			</li>
 			<li id="pageNext">
 				<a style="cursor:pointer" th:onClick="|return pageMove('next');|">
-					<span class="page-link">></span>
+					<span class="page-link">&gt;</span>
 				</a>
 			</li>
 			<li>
@@ -198,32 +88,21 @@
               </div>
               <!-- 검색어 입력창 -->
               <div class="search-input-wrap fl">
-                <input class="form-control mr-sm-2" type="search" onKeypress = "if(event.keyCode==13) {return searchBoard()}" placeholder="검색어를 입력해 주세요.">
+                <input class="form-control mr-sm-2" onKeypress = "if(event.keyCode==13) {return searchBoard()}" placeholder="검색어를 입력해 주세요">
               </div>
-              <button class="btn glass" type="submit"><img th:src="@{/images/돋보기.png}" onClick="return searchBoard()" class="button-image"></button>
+              <button class="btn glass"><img th:src="@{/images/돋보기.png}" onClick="return searchBoard()" class="button-image"></button>
             </div>
           </fieldset>
         </form>
       </div>
     </div>
-  </div>
+</th:block>
 
-  <footer class="bg-dark mt-3 p-3 text-center" style="color: #FFFFFF;">
-    <div class="row">
-      <div class="col-2"><a href="#"></a>이용약관</div>
-      <div class="col-2"><a href="#"></a>개인정보처리방침</div>
-      <div class="col-2"><a href="#"></a>커뮤니티이용규칙</div>
-      <div class="col-2"><a href="#"></a>공지사항</div>
-      <div class="col-2"><a href="#"></a>문의하기</div>
-      <div class="col-2">(주)나만따라YU</div>
-    </div>
-  </footer>
-  
 <th:block layout:fragment="script">
-    <script th:inline="javascript">
+    <script type="text/javascript">
         var pages = getParameterByName("page");
         var boardtype=getParameterByName("boardtype");
-        
+
         if(pages == ""){
             pages=0;
         }
@@ -245,12 +124,12 @@
             if(pageNum + nextOrPrev < 0) return false;
             else if(pageNum + nextOrPrev > [[${board.getTotalPages()}]] - 1) return false;
 
-            location.href = "/board/boardList/?boardtype=" + boardtype + "&page=" + (pageNum + nextOrPrev);
+            location.href = "/yu/board/boardList/?boardtype=" + boardtype + "&page=" + (pageNum + nextOrPrev);
             return true;
         }
         
         function insertBoard() {
-            location.href = "/board/boardInsert?boardtype=" + boardtype;
+            location.href = "/yu/board/boardInsert?boardtype=" + boardtype;
         }
         
         function searchTotalBoard() {
@@ -270,7 +149,7 @@
         	var chgText = text.val().replace(/%/gi, '%25');
         	chgText = chgText.replace(/\\/gi, '%5C');
         	
-        	location.href = "/search/searchAllList?text=" + 
+        	location.href = "/yu/search/searchAllList?text=" + 
         			chgText + "&date=" + date.val() + "&option=" + option.val();
         }
         
@@ -279,6 +158,7 @@
         	var date = $("#searchDate option:selected");
         	var option = $("#searchOption option:selected");
         	
+        	alert(text.val());
         	if(text.val().trim() == "") {
         		alert("검색어를 입력하세요");
         		return false;
@@ -291,144 +171,9 @@
         	var chgText = text.val().replace(/%/gi, '%25');
         	chgText = chgText.replace(/\\/gi, '%5C');
         	
-        	location.href = "/search/searchBoardList?boardtype=" + boardtype + "&text=" + 
+        	location.href = "/yu/search/searchBoardList?boardtype=" + boardtype + "&text=" + 
         			chgText + "&date=" + date.val() + "&option=" + option.val();
         }
     </script>
-
-</th:block>
-<th:block layout:fragment="title">
-    <title>Board List</title>
-</th:block>
-
-<th:block layout:fragment="nav-title">
-    <div class="fixed-navbar">
-        <div class="pull-left">
-            <h1 class="page-title">Board List</h1>
-        </div>
-    </div>
-</th:block>
-
-<th:block layout:fragment="content">
-    <div id="grid">
-        <div id="menubar">
-            <ul class="nav flex-column">
-                <li class="dropdown dropright">
-                    <a class="nav-link" href="#" id="navbarDroprightMenuLink" role="button" 
-                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" tabindex="-1" aria-disabled="true"
-                    style="text-decoration:underline; font-size:20px; width:140px; border: 1px solid blue">
-                    	게시판 선택
-                    </a>
-                    <div class="dropdown-menu text-center">
-                        <a class="dropdown-item" href="/board/boardList?boardtype=자유게시판">자유게시판</a><br>
-                        <a class="dropdown-item" href="/board/boardList?boardtype=잡담게시판">잡담게시판</a><br>
-                        <a class="dropdown-item" href="/board/boardList?boardtype=게임게시판">게임게시판</a>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </div>
-    <br>
-    <div style="width:600px; margin:0 auto; font-size:20px; height:30px; text-align:center">
-    	<b style="border:1px solid green; hegiht:25px; width:">전체 검색</b><br><br>
-    	<b>
-    		<select id="totalSearchDate">
-    			<option value="all">전체기간</option>
-    			<option value="1week">1주</option>
-    			<option value="1month">1개월</option>
-    			<option value="6month">6개월</option>
-    		</select>
-    	</b> 
-    	<b>
-    		<select id="totalSearchOption">
-    			<option value="all">제목+내용</option>
-    			<option value="title">제목</option>
-    			<option value="writer">글작성자</option>
-    			<option value="commentContent">댓글내용</option>
-    		</select>
-    	</b> 
-  		 <input type="text" id="totalSearchBox" style="font-size:20px;" onKeypress = "if(event.keyCode==13) {return searchTotalBoard()}">
-    	<button onClick="return searchTotalBoard()">▶</button>
-    </div>
-    <div><h2 style="color:Blue">Board List</h2></div>
-    <div><h4 style="color:red" th:text=${boardType}></h4></div>
-    <br><br>
-
-    <table class="table table-horizontal table-bordered" id="boardListTable">
-        <thead class="thead-strong">
-        <tr>
-            <th>게시글번호</th>
-            <th>제목</th>
-            <th>작성자</th>
-            <th>등록일</th>
-            <th>조회수</th>
-            <th>좋아요</th>
-        </tr>
-        </thead>
-        <tbody id="tbody">
-        <tr th:each="boardlist :${board}">
-            <td th:text="${boardlist.getBno()}"></td>
-            <td> <a th:href="@{'/board/boardView/'+${boardlist.getBno()}}" th:text="${boardlist.getTitle()}"></a></td>
-            <td th:text="${boardlist.getNickname()}"></td>
-            <td th:text="${boardlist.getRegister_date()}"></td>
-            <td th:text="${boardlist.getRead_count()}"></td>
-            <td th:text="${boardlist.getLike_count()}"></td>
-        </tr>
-        </tbody>
-    </table>
-    <ul class="pagination">
-        <li id="pagefirst">
-            <a th:href="'?boardtype=' + ${boardType} + '&page=0'">
-            <span>«</span>
-            </a>
-        </li>
-        <li style="cursor:pointer" id="pagePrev">
-            <a th:onClick="|return pageMove('prev');|">
-                <span><</span>
-            </a>
-        </li>
-        <li style="cursor:pointer" th:if="${board.getTotalPages()}>0" th:id="page+${num}" th:each="num: ${#numbers.sequence(0,board.getTotalPages()-1)}">
-            <a th:href="'?boardtype=' + ${boardType} + '&page=' + ${num}" th:text="${num+1}"></a>
-        </li>
-        <li id="pageNext">
-            <a style="cursor:pointer" th:onClick="|return pageMove('next');|">
-                <span>></span>
-            </a>
-        </li>
-        <li>
-            <a th:if="${board.getTotalPages()}>0" th:href="'?boardtype=' + ${boardType} + '&page=' + ${board.getTotalPages()-1}">
-                <span>»</span>
-            </a>
-            <a th:if="${board.getTotalPages()}==0" th:href="'?boardtype=' + ${boardType} + '&page=' + ${board.getTotalPages()}">
-                <span>»</span>
-            </a>
-        </li>
-    </ul>
-    <div style="float: right">
-        <button type="button" onClick="location.href='/studentInfo/studentInfo'" class="btn btn-primary waves-effect waves-light">학생 정보</button>
-        <button th:if="${userSid} != null" type="button" onClick="insertBoard()" class="btn btn-primary waves-effect waves-light">등록</button>
-    </div>
-    <!-- /.card-content -->
-    <br>
-    <div style="width:500px; margin:0 auto; font-size:15px; height:30px">
-    	<b>
-    		<select id="searchDate">
-    			<option value="all">전체기간</option>
-    			<option value="1week">1주</option>
-    			<option value="1month">1개월</option>
-    			<option value="6month">6개월</option>
-    		</select>
-    	</b> 
-    	<b>
-    		<select id="searchOption">
-    			<option value="all">제목+내용</option>
-    			<option value="title">제목</option>
-    			<option value="writer">글작성자</option>
-    			<option value="commentContent">댓글내용</option>
-    		</select>
-    	</b> 
-    	<input type="text" id="searchBox" style="font-size:15px;" onKeypress = "if(event.keyCode==13) {return searchBoard()}">
-    	<button onClick="return searchBoard()">▶</button>
-    </div>
 </th:block>
 </html>
