--- a/src/main/resources/templates/board/boardView.html
+++ b/src/main/resources/templates/board/boardView.html
@@ -1,117 +1,15 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width" , initial-scale="1">
-    <title>게시판 읽기</title>
-    <link rel="stylesheet" th:href="@{/css/bootstrap.css}">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-    <script th:src="@{/js/bootstrap.js}"></script>
-    <script th:src="@{/scripts/jquery.min.js}"></script>
-</head>
-<body>
-    <!-- 모바일 header -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-center">
-        <a class="navbar-brand" href="login.html">나만 따라 YU</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbar">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item dropdown dropdown-mobile"><a class="nav-link dropdown-toggle" id="dropdown" data-toggle="dropdown" href="#">
-                    매칭
-                </a>
-                    <div class="dropdown-menu" aria-labelledby="dropdown">
-                        <a class="dropdown-item" href="#">청소</a>
-                        <a class="dropdown-item" href="#">배달</a>
-                        <a class="dropdown-item" href="#">역할대행</a>
-                        <a class="dropdown-item" href="#">심부름</a>
-                    </div>
-                </li>
-                <li class="nav-item"><a class="nav-link" href="schedule.html">시간표</a></li>
-                <li class="nav-item"><a class="nav-link" href="class.html">강의평가</a></li>
-                <li class="nav-item"><a class="nav-link" href="board.html">게시판</a></li>
-                <li class="nav-item"><a class="nav-link" href="graph.html">통계그래프</a></li>
-                <li>
-                    <form class="input-group">
-                        <input class="form-control mr-sm-3" type="search" placeholder="검색어를 입력해 주세요." aria-label="Search">
-                        <button class="btn glass" type="submit"><img th:src="@{/images/돋보기.png}" width="100%"></button>
-                    </form>
-                </li>
-                <li>
-                    <form class="form-signin" style="margin:auto;">
-                        <img src="images/증명사진.jpg" style="width:25%;">
-                        <div style="color: white">이성욱 님, 환영합니다!!!</div>
-                        <button class="btn btn-sm btn-block btn-outline-light" type="button" onclick="location.href='myInfo.html'">내정보</button>
-                        <button class="btn btn-sm btn-block btn-danger" type="button" onclick="location.href='index.html'">로그아웃</button>
-                    </form>
-                </li>
-            </ul>
-        </div>
-    </nav>
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/basic}">
 
-    <!-- pc header -->
-    <div class="row flex">
-        <div class="col-2 item">
-            <a href="login.html"><img src="images/영대마크.png" href="#page-top"></a>
-        </div>
-        <div class="col-7 item">
-            <form class="input-group">
-                <input class="form-control mr-sm-2" type="search" placeholder="검색어를 입력해 주세요." aria-label="Search">
-                <button class="btn glass" type="submit"><img src="images/돋보기.png" width="100%"></button>
-            </form>
-        </div>
-        <div class="col-3 item">
-            <form class="form-signin" style="margin:auto;">
-                <img src="images/증명사진.jpg" style="width:25%;">
-                이성욱 님, 환영합니다!!!
-                <button class="btn btn-sm btn-block btn-outline-dark" type="button" onclick="location.href='myInfo.html'">내정보</button>
-                <button class="btn btn-sm btn-block btn-danger" type="button" onclick="location.href='index.html'">로그아웃</button>
-            </form>
-        </div>
-    </div>
+<th:block layout:fragment="title">
+	<title>YU BoardView</title>
+</th:block>
 
-    <!-- contents -->
-    <br>
-    <div id="grid">
-        <!-- 왼쪽 메뉴바 -->
-        <div id="menubar">
-            <ul class="nav flex-column">
-                <li class="dropdown dropright">
-                    <a class="nav-link" href="#" id="navbarDroprightMenuLink" role="button" data-toggle="collapse" aria-haspopup="true" aria-expanded="false" tabindex="-1" aria-disabled="true" data-target="#demo">
-                        매칭
-                    </a>
-                    <div id="demo" class="collapse">
-                        <a href="#">청소</a><br>
-                        <a href="#">배달</a><br>
-                        <a href="#">역할대행</a><br>
-                        <a href="#">심부름</a>
-                    </div>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" href="schedule.html" tabindex="-1" aria-disabled="true">시간표</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="class.html" tabindex="-1" aria-disabled="true">강의평가</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="board.html" tabindex="-1" aria-disabled="true">게시판</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="graph.html" tabindex="-1" aria-disabled="true">통계 그래프</a>
-                </li>
-            </ul>
-        </div>
-        <br>
-        <!-- 오른쪽 컨텐츠 -->
-        <div id="article" class="article-wrap">
-        <input type = "hidden" th:id="${board.bno}" name="boardNumber">
-            <div id="article-container">
-                <header>
-                    <div class="col-sm-auto clear article-head">
+<th:block layout:fragment="article">
+	<input type = "hidden" th:id="${board.bno}" name="boardNumber">
+		<div id="article-container">
+			<header>
+				<div class="col-sm-auto clear article-head">
                         <!-- 글 제목 -->
                         <h3 class="title">
                             <span th:text="${board.getTitle()}"></span>
@@ -137,9 +35,9 @@
                     <div id="recommend-btn" class="recommend-btn clear">
                         <div class="btn-inner">
                             <!-- 좋아요 -->
-                            <div class="like-btn-form fl" th:if="${userSid} != null">
-                                <span>좋아요</span>
-                                <button type="button" class="btn-like"><img th:src="@{/images/pngwing.com.png}" th:onClick="|return likeBoard();|" id="likeboard" class="like-btn"></button>
+                            <div style="width:160px;text-align:right;" class="like-btn-form fl" th:if="${userSid} != null">
+                                <span style="vertical-align:middle" id="likeText">좋아요</span>
+                                <button type="button" class="btn-like"><img style="width:40px;height:40px;" th:src="@{/images/pngwing.com.png}" th:onClick="|return likeBoard();|" id="likeboard" class="like-btn"></button>
                             </div>
                             <!-- 신고 -->
                             <div class="declare-btn-form fl">
@@ -179,21 +77,54 @@
                                 <!-- 댓글작성 닉네임 -->
                                 <div class="comment-nick"><span class="comment-writer" th:text="${boardComment.getNickname()}"></span></div>
                                 <!-- 댓글 내용 -->
-                                <div class="comment-content clear" th:if="${boardComment.getCheck_delete()} == 'F'" ><p th:text="${boardComment.getContent()}">내용2</p></div>
+                                <div class="comment-content clear" th:if="${boardComment.getCheck_delete()} == 'F'" ><p th:text="${boardComment.getContent()}"></p></div>
                                 <div class="comment-content clear" th:unless="${boardComment.getCheck_delete()} == 'F'"><p>삭제된 댓글입니다</p></div>
                                 <!-- 댓글 날짜 -->
                                 <div class="comment-written-at"><span class="date-time" th:text="${boardComment.getRegister_date()}"></span></div>
                                 <!-- 댓글쓰기, 수정, 삭제 : 지금 로그인 유저정보가 있으면 수정, 삭제 보이게하고 아니면 댓글쓰기만 해주세요 -->
-                                <div class="comment-option-button">
+                                <div class="comment-option-button" th:if="${userSid} != null and ${boardComment.getCheck_delete()} == 'F'">
                                     <a>댓글 쓰기</a>
-                                    <a>수정</a>
-                                    <a>삭제</a>
+                                    <a th:if="${userSid} == ${boardComment.getStudentForeignkey().getSid()}">수정</a>
+                                    <a th:if="${userSid} == ${boardComment.getStudentForeignkey().getSid()}">삭제</a>
                                 </div>
                             </div>
                         </li>
                     </ul>
                 </div>
             </div>
+         <br>
+            
+         <nav aria-label="Page navigation">
+            <ul class="pagination justify-content-center">
+        		<li id="pagefirst">
+            		<a href="?page=0">
+                		<span>«</span>
+            		</a>
+        		</li>
+        		<li style="cursor:pointer" id="pagePrev">
+            		<a th:onClick="|return pageMove('prev');|">
+                		<span>＜</span>
+            		</a>
+        		</li>
+        		<li style="cursor:pointer" th:if="${boardCommentList.getTotalPages()}>0" th:id="page+${num}" th:each="num: ${#numbers.sequence(0,boardCommentList.getTotalPages()-1)}">
+            		<a th:href="'?'+page+'='+${num}" th:text="${num+1}"></a>
+        		</li>
+        		<li id="pageNext">
+            		<a style="cursor:pointer" th:onClick="|return pageMove('next');|">
+                		<span>></span>
+            		</a>
+        		</li>
+        		<li>
+           			<a th:if="${boardCommentList.getTotalPages()}>0" th:href="'?'+page+'='+${boardCommentList.getTotalPages()-1}">
+                		<span>»</span>
+            		</a>
+            		<a th:if="${boardCommentList.getTotalPages()}==0" th:href="'?'+page+'='+${boardCommentList.getTotalPages()}">
+                		<span>»</span>
+            		</a>
+        		</li>
+    		</ul>
+    	</nav>
+    		<br><br>
             <!-- 댓글 입력창 -->
             <div class="comment-write-wrap clear">
                 <div class="comment-write-form">
@@ -221,20 +152,7 @@
                     <button type="button" class="btn-blue">글쓰기</button>
                 </div>
             </div>
-        </div>
-    </div>
-
-    <!-- footer -->
-    <footer class="bg-dark mt-3 p-3 text-center">
-        <div class="row">
-            <div class="col-2"><a href="#" >이용약관</a></div>
-            <div class="col-2"><a href="#" >개인정보처리방침</a></div>
-            <div class="col-2"><a href="#" >커뮤니티이용규칙</a></div>
-            <div class="col-2"><a href="#" >공지사항</a></div>
-            <div class="col-2"><a href="#" >문의하기</a></div>
-            <div class="col-2">(주)나만따라YU</div>
-        </div>
-    </footer>
+</th:block>
 
 <th:block layout:fragment="script">
     <script type="text/javascript">
@@ -248,10 +166,12 @@
         $("#page"+pages).attr("class","active");
         
         if(likecheck==''||likecheck=='F'){
-            $("#likeboard").attr("th:src", "@{/images/pngwing.com.png}");
+        	$("#likeText").html("좋아요");
+            $("#likeboard").attr("src", "/images/pngwing.com.png");
         }
         else{
-            $("#likeboard").attr("th:src", "@{/images/pngwingdown.com.png}");
+        	$("#likeText").html("좋아요 취소");
+            $("#likeboard").attr("src", "/images/pngwingdown.com.png");
         }
 
         function getParameterByName(name) {
@@ -270,7 +190,7 @@
             if(pageNum + nextOrPrev < 0) return false;
             else if(pageNum + nextOrPrev > [[${boardCommentList.getTotalPages()}]] - 1) return false;
 
-            location.href = "/board/boardView/" + boardNumber + "?page=" + (pageNum + nextOrPrev);
+            location.href = "/yu/board/boardView/" + boardNumber + "?page=" + (pageNum + nextOrPrev);
             return true;
         }
         function deleteBoard(bno) {
@@ -284,7 +204,7 @@
                     success : function(data){
                         if(data == true) {
                             alert("게시글 삭제 성공");
-                            location.href = '/board/boardList?boardtype=자유게시판';
+                            location.href = '/yu/board/boardList?boardtype=자유게시판';
                         }
                         else
                             alert("게시글 삭제 실패");
@@ -328,7 +248,7 @@
 
             $.ajax({
                 type: "POST",
-                url : "/boardComment/insertBoardComment",
+                url : "/yu/boardComment/insertBoardComment",
                 data : {
                     bno : boardNumber,
                     ccno : ccno,
@@ -356,7 +276,7 @@
 
                 $.ajax({
                     type: "PUT",
-                    url : "/boardComment/deleteBoardComment",
+                    url : "/yu/boardComment/deleteBoardComment",
                     data : {
                         cno : cno
                     },
@@ -421,7 +341,7 @@
 
             $.ajax({
                 type: "PUT",
-                url : "/boardComment/updateBoardComment",
+                url : "/yu/boardComment/updateBoardComment",
                 data : {
                     bno : boardNumber,
                     cno : clickCommentCno,
@@ -447,7 +367,7 @@
             var sid = "[[${userSid}]]";
             if(likecheck=="") {
                 $.ajax({
-                    url: "/boardLike/insertBoardLike",
+                    url: "/yu/boardLike/insertBoardLike",
                     type: "POST",
                     data: {
                         sid: sid,
@@ -464,7 +384,7 @@
             }
             else{
                 $.ajax({
-                    url: "/boardLike/updateBoardLike",
+                    url: "/yu/boardLike/updateBoardLike",
                     type: "PUT",
                     data: {
                         sid: sid,
@@ -473,11 +393,13 @@
                     success: function (data) {
                         $("#likecnt").html(data);
 
-                        if($("#likeboard").attr("th:src") == "@{/images/pngwing.com.png}") {
-                            $("#likeboard").attr("th:src", "@{/images/pngwingdown.com.png}");
+                        if($("#likeboard").attr("src") == "/images/pngwing.com.png") {
+                        	$("#likeText").html("좋아요 취소");
+                            $("#likeboard").attr("src", "/images/pngwingdown.com.png");
                         }
                         else{
-                            $("#likeboard").attr("th:src", "@{/images/pngwing.com.png}");
+                        	$("#likeText").html("좋아요");
+                            $("#likeboard").attr("src", "/images/pngwing.com.png");
                         }
                     },
                     error: function () {
@@ -490,5 +412,4 @@
         }
     </script>
 </th:block>
-</body>
 </html>
