--- a/src/main/resources/templates/fragments/body.html
+++ b/src/main/resources/templates/fragments/body.html
@@ -3,7 +3,7 @@
 	<body th:fragment="main-body">
 	
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark text-center">
-  			<a class="navbar-brand" href="index.html">나만 따라 YU</a>
+  			<a class="navbar-brand" href="/yu/index">나만 따라 YU</a>
   			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
     			<span class="navbar-toggler-icon"></span>
   			</button>
@@ -16,16 +16,16 @@
       				<li class="nav-item"><a class="nav-link" href = "#">통계그래프</a></li>
       				<li>
         				<form class="input-group">
-          					<input class="form-control mr-sm-3" type="search" placeholder="검색어를 입력해주세요." aria-label="Search">
+          					<input class="form-control mr-sm-3" type="search" placeholder="검색어를 입력해주세요" aria-label="Search">
           					<button class="btn glass" type="submit"><img th:src="@{/images/돋보기.png}" width="100%"></button>
         				</form>
       				</li>
       				<li th:if="${userSid} == null">
         				<form class="form-signin" method="post" action="/loginProcess" style="margin:auto;">
           					<label for="username" class="sr-only">Student Number</label>
-          					<input type="text" name="username" id="username" class="form-control" placeholder="학번을 입력해주세요." required autofocus>
+          					<input type="text" name="username" id="username" class="form-control" placeholder="학번을 입력해주세요" required autofocus>
          					<label for="password" class="sr-only">Password</label>
-          					<input type="password" name="password" id="password" class="form-control" placeholder="비밀번호를 입력해주세요." required>
+          					<input type="password" name="password" id="password" class="form-control" placeholder="비밀번호를 입력해주세요" required>
           					<button class="btn btn-sm btn-block" type="submit" style="background:#0D3F7A; color:white;">로그인</button>
           					<button class="btn btn-sm btn-block btn btn-secondary" type="button" 
           					onclick="var win = window.open('http://portal.yu.ac.kr/sso/login.jsp?type=home&cReturn_Url=http%3A%2F%2Fwww.yu.ac.kr%2Findex.php', '_blank');win.focus();">
@@ -36,7 +36,7 @@
       				<li th:unless="${userSid} == null">
             			<form class="form-signin" style="margin:auto;">
               				<img src="images/증명사진.jpg" style="width:25%;">
-              				<div style="color: white">이성욱 님, 환영합니다!!!</div>
+              				<div style="color: white">[[${studentInfo.getNickname()}]] 님 환영합니다!!!</div>
               				<button class="btn btn-sm btn-block btn-outline-light" type="button" onclick="location.href='myInfo.html'">내정보</button>
               				<button class="btn btn-sm btn-block btn-danger" type="button" onclick="location.href='/logout'">로그아웃</button>
             			</form>
@@ -48,11 +48,11 @@
 		
 		<div class="row flex">
   			<div class="col-2 item">
-    			<a href="index.html"><img th:src="@{/images/영대마크.png}" href="#page-top"></a>
+    			<a href="/yu/index"><img th:src="@{/images/영대마크.png}" href="#page-top"></a>
   			</div>
   			<div class="col-7 item">
     			<form class="input-group">
-      				<input class="form-control mr-sm-2" type="search" placeholder="검색어를 입력해 주세요." aria-label="Search">
+      				<input class="form-control mr-sm-2" type="search" placeholder="검색어를 입력해 주세요" aria-label="Search">
       				<button class="btn glass" type="submit"><img th:src="@{/images/돋보기.png}" width="100%"></button>
     			</form>
   			</div>
@@ -68,10 +68,10 @@
           			비밀번호 찾기
           			</button>
     			</form>
-    			<form th:unless="${userSid} == null" class="form-signin" style="margin:auto;">
+            	<form th:unless="${userSid} == null" class="form-signin" style="margin:auto;">
               		<img src="images/증명사진.jpg" style="width:25%;">
-              		<div style="color: white">이성욱 님, 환영합니다!!!</div>
-              		<button class="btn btn-sm btn-block btn-outline-light" type="button" onclick="location.href='myInfo.html'">내정보</button>
+              		<div style="color:white">[[${studentInfo.getNickname()}]] 님 환영합니다!!!</div>
+              		<button class="btn btn-sm btn-block btn-outline-dark" type="button" onclick="location.href='myInfo.html'">내정보</button>
               		<button class="btn btn-sm btn-block btn-danger" type="button" onclick="location.href='/logout'">로그아웃</button>
             	</form>
   			</div>
@@ -103,9 +103,9 @@
            	 		게시판
           			</a>
           			<div id="demo2" class="collapse">
-            			<a href="/board/boardList?boardtype=자유게시판">자유게시판</a><br>
-            			<a href="/board/boardList?boardtype=중고게시판">중고게시판</a><br>
-            			<a href="/board/boardList?boardtype=정보게시판">정보게시판</a><br>
+            			<a href="/yu/board/boardList?boardtype=자유게시판">자유게시판</a><br>
+            			<a href="/yu/board/boardList?boardtype=중고게시판">중고게시판</a><br>
+            			<a href="/yu/board/boardList?boardtype=정보게시판">정보게시판</a><br>
           			</div>
         		</li>
         		<li class="nav-item">
@@ -133,17 +133,14 @@
   			</div>
 		</footer>
 
-		<script th:src="@{/scripts/jquery.min.js}"></script>
-		<script th:src="@{/plugin/bootstrap/js/bootstrap.min.js}"></script>
-		<script th:src="@{/plugin/mCustomScrollbar/jquery.mCustomScrollbar.concat.min.js}"></script>
-		<script th:src="@{/ckeditor/ckeditor.js}"></script>
-		<script th:src="@{/scripts/main.js}"></script>
-		<script th:src="@{/scripts/common.js}"></script>
 		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-		<script rel="JavaScript" th:href="@{/js/bootstrap.js}"></script>
+    	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
+    	<script th:src="@{/ckeditor/ckeditor.js}"></script>
+    	<script th:src="@{/js/bootstrap.js}"></script>
+    	<script th:src="@{/scripts/jquery.min.js}"></script>
+    	
 		<th:block layout:fragment="script"></th:block>
 	</body>
 </html>
