--- a/src/main/resources/templates/fragments/body.html
+++ b/src/main/resources/templates/fragments/body.html
@@ -16,7 +16,7 @@
       				<li class="nav-item"><a class="nav-link" href = "#">통계그래프</a></li>
       				<li>
         				<form class="input-group">
-          					<input class="form-control mr-sm-3" type="search" placeholder="검색어를 입력해주세요" aria-label="Search">
+          					<input id="totalSearchBox" class="form-control mr-sm-3" type="search" placeholder="검색어를 입력해주세요" aria-label="Search">
           					<button class="btn glass" type="submit"><img th:src="@{/images/돋보기.png}" width="100%"></button>
         				</form>
       				</li>
@@ -52,7 +52,7 @@
   			</div>
   			<div class="col-7 item">
     			<form class="input-group">
-      				<input class="form-control mr-sm-2" type="search" placeholder="검색어를 입력해 주세요" aria-label="Search">
+      				<input id="totalSearchBox" class="form-control mr-sm-2" type="search" placeholder="검색어를 입력해 주세요" aria-label="Search">
       				<button class="btn glass" type="submit"><img th:src="@{/images/돋보기.png}" width="100%"></button>
     			</form>
   			</div>
