--- a/src/main/resources/templates/search/searchBoardList.html
+++ b/src/main/resources/templates/search/searchBoardList.html
@@ -1,8 +1,105 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/basic}">
 
+<th:block layout:fragment="title">
+	<title>YU BoardList</title>
+</th:block>
+
+<th:block layout:fragment="article">
+    <div id="article">
+      <div class="container-fluid">
+        <div class="col-sm-auto article-header">
+          <h2 style="color:red" th:text=${boardType}></h2>
+        </div>
+        <table class="col-sm-auto table table-hover">
+          <thead>
+            <tr>
+              <th>번호</th>
+              <th>제목</th>
+              <th>글쓴이</th>
+              <th>작성일</th>
+              <th>조회수</th>
+              <th>좋아요</th>
+            </tr>
+          </thead>
+		<tbody id="tbody">
+        <tr th:each="boardlist :${board}">
+            <td th:text="${boardlist.getBno()}"></td>
+            <td> <a th:href="@{'/yu/board/boardView/'+${boardlist.getBno()}}" th:text="${boardlist.getTitle()}"></a></td>
+            <td th:text="${boardlist.getNickname()}"></td>
+            <td th:text="${boardlist.getRegister_date()}"></td>
+            <td th:text="${boardlist.getRead_count()}"></td>
+            <td th:text="${boardlist.getLike_count()}"></td>
+        </tr>
+        </tbody>
+        </table>
+        <hr />
+        <a class="btn btn-primary" th:if="${userSid} != null" type="button" onClick="insertBoard()" role="button">글쓰기</a>
+
+
+        <nav aria-label="Page navigation">
+          <ul class="pagination justify-content-center">
+            <li id="pagefirst">
+				<a th:href="'?boardtype=' + ${boardType} + '&page=0'">
+					<span class="page-link">«</span>
+				</a>
+			</li>
+			<li style="cursor:pointer" id="pagePrev" class="page-item disabled">
+				<a th:onClick="|return pageMove('prev');|">
+					<span class="page-link">&lt;</span>
+				</a>
+			</li>
+			<li class="page-item" style="cursor:pointer" th:if="${board.getTotalPages()}>0" th:id="page+${num}" th:each="num: ${#numbers.sequence(0,board.getTotalPages()-1)}">
+				<a class="page-link" th:href="'?boardtype=' + ${boardType} + '&page=' + ${num}" th:text="${num+1}"></a>
+			</li>
+			<li id="pageNext">
+				<a style="cursor:pointer" th:onClick="|return pageMove('next');|">
+					<span class="page-link">&gt;</span>
+				</a>
+			</li>
+			<li>
+				<a th:if="${board.getTotalPages()}>0" th:href="'?boardtype=' + ${boardType} + '&page=' + ${board.getTotalPages()-1}">
+					<span class="page-link">»</span>
+				</a>
+				<a th:if="${board.getTotalPages()}==0" th:href="'?boardtype=' + ${boardType} + '&page=' + ${board.getTotalPages()}">
+					<span class="page-link">»</span>
+				</a>
+			</li>
+          </ul>
+        </nav>
+
+       	<form id="search-form" method="get">
+          <fieldset>
+          	<div class="search-wrap clear">
+              <!-- 옵션 -->
+              <div class="search-option-wrap fl">
+                <select id="searchDate" class="search-date">
+                  <option value="all">전체기간</option>
+                  <option value="1week">1주</option>
+                  <option value="1month">1개월</option>
+                  <option value="6month">6개월</option>
+                </select>
+                <select id="searchOption" class="search-option">
+                  <option value="all">제목+내용</option>
+                  <option value="title">제목</option>
+                  <option value="writer">글작성자</option>
+                  <option value="commentContent">댓글내용</option>
+                </select>
+              </div>
+              <!-- 검색어 입력창 -->
+              <div class="search-input-wrap fl">
+                <input id="searchBox" class="form-control mr-sm-2" onKeypress = "if(event.keyCode==13) {return searchBoard()}" placeholder="검색어를 입력해 주세요">
+              </div>
+              <button class="btn glass"><img th:src="@{/images/돋보기.png}" onClick="return searchBoard()" class="button-image"></button>
+            </div>
+          </fieldset>
+        </form>
+      </div>
+    </div>
+</th:block>
+
 <th:block layout:fragment="script">
-    <script th:inline="javascript">
+    <script>
         var pages = getParameterByName("page");
         var boardtype=getParameterByName("boardtype");
         
@@ -94,143 +191,5 @@
         			chgText + "&date=" + date.val() + "&option=" + option.val();
         }
     </script>
-
-</th:block>
-<th:block layout:fragment="title">
-    <title>Board List</title>
-</th:block>
-
-<th:block layout:fragment="nav-title">
-    <div class="fixed-navbar">
-        <div class="pull-left">
-            <h1 class="page-title">Board List</h1>
-        </div>
-    </div>
-</th:block>
-
-<th:block layout:fragment="content">
-    <div id="grid">
-        <div id="menubar">
-            <ul class="nav flex-column">
-                <li class="dropdown dropright">
-                    <a class="nav-link" href="#" id="navbarDroprightMenuLink" role="button" 
-                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" tabindex="-1" aria-disabled="true"
-                    style="text-decoration:underline; font-size:20px; width:140px; border: 1px solid blue">
-                    	게시판 선택
-                    </a>
-                    <div class="dropdown-menu text-center">
-                        <a class="dropdown-item" href="/yu/board/boardList?boardtype=자유게시판">자유게시판</a><br>
-                        <a class="dropdown-item" href="/yu/board/boardList?boardtype=잡담게시판">잡담게시판</a><br>
-                        <a class="dropdown-item" href="/yu/board/boardList?boardtype=게임게시판">게임게시판</a>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </div>
-    <br>
-    <div style="width:600px; margin:0 auto; font-size:20px; height:30px; text-align:center">
-    	<b style="border:1px solid green; hegiht:25px; width:">전체 검색</b><br><br>
-    	<b>
-    		<select id="totalSearchDate">
-    			<option value="all">전체기간</option>
-    			<option value="1week">1주</option>
-    			<option value="1month">1개월</option>
-    			<option value="6month">6개월</option>
-    		</select>
-    	</b> 
-    	<b>
-    		<select id="totalSearchOption">
-    			<option value="all">제목+내용</option>
-    			<option value="title">제목</option>
-    			<option value="writer">글작성자</option>
-    			<option value="commentContent">댓글내용</option>
-    		</select>
-    	</b> 
-  		 <input type="text" id="totalSearchBox" style="font-size:20px;" onKeypress = "if(event.keyCode==13) {return searchTotalBoard()}">
-    	<button onClick="return searchTotalBoard()">▶</button>
-    </div>
-    <div><h2 style="color:Blue">Board List</h2></div>
-    <div><h4 style="color:red" th:text="${boardType}"></h4></div>
-    <br><br>
-
-    <table class="table table-horizontal table-bordered" id="boardListTable">
-        <thead class="thead-strong">
-        <tr>
-            <th>게시글번호</th>
-            <th>제목</th>
-            <th>작성자</th>
-            <th>등록일</th>
-            <th>조회수</th>
-            <th>좋아요</th>
-        </tr>
-        </thead>
-        <tbody id="tbody">
-        <tr th:each="boardlist :${board}" th:if="${boardlist.getCheck_delete()} != 'T'">
-            <td th:text="${boardlist.getBno()}"></td>
-            <td> <a th:href="@{'/board/boardView/'+${boardlist.getBno()}}" th:text="${boardlist.getTitle()}"></a></td>
-            <td th:text="${boardlist.getNickname()}"></td>
-            <td th:text="${boardlist.getRegister_date()}"></td>
-            <td th:text="${boardlist.getRead_count()}"></td>
-            <td th:text="${boardlist.getLike_count()}"></td>
-        </tr>
-        </tbody>
-    </table>
-    <ul class="pagination">
-        <li id="pagefirst">
-            <a th:href="'?text=' + ${text}  + '&date=' + ${date} + '&option=' + ${option} + '&page=0'">
-            <span>«</span>
-            </a>
-        </li>
-        <li style="cursor:pointer" id="pagePrev">
-            <a th:onClick="|return pageMove('prev');|">
-                <span><</span>
-            </a>
-        </li>
-        <li style="cursor:pointer" th:if="${board.getTotalPages()}>0" th:id="page+${num}" th:each="num: ${#numbers.sequence(0,board.getTotalPages()-1)}">
-            <a th:href="'?text=' + ${text}  + '&date=' + ${date} + '&option=' + ${option} + '&page=' + ${num}" th:text="${num+1}"></a>
-        </li>
-        <li id="pageNext">
-            <a style="cursor:pointer" th:onClick="|return pageMove('next');|">
-                <span>></span>
-            </a>
-        </li>
-        <li>
-            <a th:if="${board.getTotalPages()}>0" th:href="'?text=' + ${text}  + '&date=' + ${date} + '&option=' + ${option} + '&page=' + ${board.getTotalPages()-1}">
-                <span>»</span>
-            </a>
-            <a th:if="${board.getTotalPages()}==0" th:href="'?text=' + ${text}  + '&date=' + ${date} + '&option=' + ${option} + '&page=' + ${board.getTotalPages()}">
-                <span>»</span>
-            </a>
-        </li>
-    </ul>
-    
-    <br>Total <b style="color:red">[[${board.getTotalPages()}]]</b> Pages / <b style="color:red">[[${board.getTotalElements()}]]</b> Elements
-    
-    <div style="float: right">
-        <button type="button" onClick="location.href='/yu/studentInfo/studentInfo'" class="btn btn-primary waves-effect waves-light">학생 정보</button>
-        <button th:if="${userSid} != null" type="button" onClick="insertBoard()" class="btn btn-primary waves-effect waves-light">등록</button>
-    </div>
-    <br>
-    <div style="width:500px; margin:0 auto; font-size:15px; height:30px">
-    	<b>
-    		<select id="searchDate">
-    			<option value="all">전체기간</option>
-    			<option value="1week">1주</option>
-    			<option value="1month">1개월</option>
-    			<option value="6month">6개월</option>
-    		</select>
-    	</b> 
-    	<b>
-    		<select id="searchOption">
-    			<option value="all">제목+내용</option>
-    			<option value="title">제목</option>
-    			<option value="writer">글작성자</option>
-    			<option value="commentContent">댓글내용</option>
-    		</select>
-    	</b> 
-    	<input type="text" id="searchBox" style="font-size:15px;" onKeypress = "if(event.keyCode==13) {return searchBoard()}">
-    	<button onClick="return searchBoard()">▶</button>
-    </div>
-    <!-- /.card-content -->
 </th:block>
 </html>
